# notify_me-aiogram-

./: .gitignore  README.md  logger_config.py  main.py  pyproject.toml  requirements.txt  settings.py
src/: bot_config.py  database.py  keyboards.py  models.py  settings.py  sheduler.py  strings.py
src/handlers/: add_not.py  admin.py  common.py  launch_not.py
